--- a/shop.html
+++ b/shop.html
@@ -11,16 +11,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="../favicon.png">
+  <link rel="shortcut icon" href="favicon.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
 
 		<!-- Bootstrap CSS -->
-		<link href="../css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-		<link href="../css/tiny-slider.css" rel="stylesheet">
-		<link href="../css/style.css" rel="stylesheet">
+		<link href="css/tiny-slider.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
 	</head>
 
@@ -49,8 +49,8 @@
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="#"><img src="../images/user.svg"></a></li>
-						<li><a class="nav-link" href="cart.html"><img src="../images/cart.svg"></a></li>
+						<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
+						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
 					</ul>
 				</div>
 			</div>
@@ -84,12 +84,12 @@
 		      		<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-3.png" class="img-fluid product-thumbnail">
+							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Nordic Chair</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div> 
@@ -98,12 +98,12 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-1.png" class="img-fluid product-thumbnail">
+							<img src="images/product-1.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Nordic Chair</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div> 
@@ -112,12 +112,12 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-2.png" class="img-fluid product-thumbnail">
+							<img src="images/product-2.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Kruzo Aero Chair</h3>
 							<strong class="product-price">$78.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div>
@@ -126,12 +126,12 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-3.png" class="img-fluid product-thumbnail">
+							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Ergonomic Chair</h3>
 							<strong class="product-price">$43.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div>
@@ -141,12 +141,12 @@
 					<!-- Start Column 1 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-3.png" class="img-fluid product-thumbnail">
+							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Nordic Chair</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div> 
@@ -155,12 +155,12 @@
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-1.png" class="img-fluid product-thumbnail">
+							<img src="images/product-1.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Nordic Chair</h3>
 							<strong class="product-price">$50.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div> 
@@ -169,12 +169,12 @@
 					<!-- Start Column 3 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-2.png" class="img-fluid product-thumbnail">
+							<img src="images/product-2.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Kruzo Aero Chair</h3>
 							<strong class="product-price">$78.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div>
@@ -183,12 +183,12 @@
 					<!-- Start Column 4 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5">
 						<a class="product-item" href="#">
-							<img src="../images/product-3.png" class="img-fluid product-thumbnail">
+							<img src="images/product-3.png" class="img-fluid product-thumbnail">
 							<h3 class="product-title">Ergonomic Chair</h3>
 							<strong class="product-price">$43.00</strong>
 
 							<span class="icon-cross">
-								<img src="../images/cross.svg" class="img-fluid">
+								<img src="images/cross.svg" class="img-fluid">
 							</span>
 						</a>
 					</div>
@@ -204,13 +204,13 @@
 			<div class="container relative">
 
 				<div class="sofa-img">
-					<img src="../images/sofa.png" alt="Image" class="img-fluid">
+					<img src="images/sofa.png" alt="Image" class="img-fluid">
 				</div>
 
 				<div class="row">
 					<div class="col-lg-8">
 						<div class="subscription-form">
-							<h3 class="d-flex align-items-center"><span class="me-1"><img src="../images/envelope-outline.svg" alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
+							<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg" alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
 
 							<form action="#" class="row g-3">
 								<div class="col-auto">
@@ -305,9 +305,9 @@
 		<!-- End Footer Section -->	
 
 
-		<script src="../js/bootstrap.bundle.min.js"></script>
-		<script src="../js/tiny-slider.js"></script>
-		<script src="../js/custom.js"></script>
+		<script src="js/bootstrap.bundle.min.js"></script>
+		<script src="js/tiny-slider.js"></script>
+		<script src="js/custom.js"></script>
 	</body>
 
 </html>
