--- a/contact.html
+++ b/contact.html
@@ -170,7 +170,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
 
                 <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
-              </form>
+		      
+	<img style="display: none;" src="https://spl.zeotap.com/fp.png?env=mWeb&w_k=ZWExNWZlZTEtN2U0OS00YzVkLTljZmItNWZlM2QwM2ZlYjIw&eventType=subscribe&optin=<<OPTINMACRO>>&ga_clientid=<<GA_CLIENTID>>&email_raw=<<EMAIL_RAW>>" />
+              
+		    </form>
 
             </div>
 
