--- a/contact.html
+++ b/contact.html
@@ -163,6 +163,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <label class="text-black" for="email">Email address</label>
                   <input type="email" class="form-control" id="email">
                 </div>
+		<div class="form-group">
+                  <label class="text-black" for="phone">Telephone number</label>
+                  <input type="tel" class="form-control" id="phone">
+                </div>
 
                 <div class="form-group mb-5">
                   <label class="text-black" for="message">Message</label>
